--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>React App</title>
+    <title>SEUNGYOON</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
-
+    <style>
+      body{
+        background: url("https://cdn.pixabay.com/photo/2019/04/10/11/56/watercolour-4116932_1280.png") no-repeat center center fixed;
+        margin: 0;
+        /* font-family: 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; */
+        height: 100%;
+        width: 100%;
+      }
+    </style>
   </head>
   <body>
     <div id="root"></div>
